--- a/characterSheet.html
+++ b/characterSheet.html
@@ -41,7 +41,7 @@
     <!--================ Start Header Area =================-->
     <div class="container-fluid">
         <div class="row justify-content-md-center">
-            <div class="col-md-auto">
+            <div class="col-md-auto" align="center">
                 <div class="logo justify-content-center"><a href="index.html"> <img src="Assets/Logo.png" alt=""
                             srcset="" width="100%" height="100%"></a>
                 </div>
@@ -52,7 +52,7 @@
 
     <!--======== Start comic cards =========-->
     <div class="container comic-card">
-        <div class="row mx-auto justify-content-center">
+        <div class="row mx-auto justify-content-center" align="center">
             <div class="col">
                 <div class="card text-center border-0" style="width: 12rem;">
                     <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
