--- a/download.html
+++ b/download.html
@@ -51,7 +51,7 @@
     <!--================ End Header Area =================-->
 
     <!--======== Start comic cards =========-->
-    <div class="container comic-card">
+    <div class="container comic-card" align="center> 
         <div class="row mx-auto justify-content-center">
             <div class="col">
                 <div class="card text-center border-0" style="width: 12rem;">
