--- a/index.html
+++ b/index.html
@@ -55,16 +55,25 @@
     <!--================ End Header Area =================-->
 
     <!--========== Start Main Landing Area ================-->
+    <!-- <div class="header">
+        <header>
+
+        </header>
+    </div> -->
     <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
-            <div class="hero"><img src="Assets/hero-image-home-page-v2.jpg" alt="" srcset="" width="100%" height="100%">
+            <div class="header"></div>
+            <!-- <div class="hero"><img src="Assets/hero-image-home-page-v2.jpg" alt="" srcset="" width="100%"
+                        height="100%">
+                </div> -->
+            <!-- <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
+                        class="logo-typo carousel-caption justify-content-md-center mx-auto"> -->
+            <!-- <p class="sub-text carousel-caption">Welcomes you</p> -->
 
-                <!-- <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
-                    class="logo-typo carousel-caption justify-content-md-center mx-auto"> -->
-                <!-- <p class="sub-text carousel-caption">Welcomes you</p> -->
-            </div>
         </div>
     </div>
+
+
     <!--========== End Main Landing Area ==========-->
 
     <!--========== Start Sidebar ==========-->
@@ -214,10 +223,12 @@
 
     <!-- ===========Start Take a tour ===========-->
     <div class="container" align="center">
-        <div class="col mx-auto tour-button">
+        <div class="col mx-auto tour-button" align="center">
             <a href="/tour.html"><img src="/Assets/take a tour buttonv2.png" alt="" srcset="" width="100%"
                     height="100%"></a>
         </div>
+
+
     </div>
     <!-- ===========End Take a tour ===========-->
 
@@ -283,8 +294,8 @@
                 </div>
 
             </div>
-    </div>
-    </footer>
+
+        </footer>
     </div>
     <!-- ========== End Footer ============== -->
 
