--- a/tour.html
+++ b/tour.html
@@ -40,7 +40,7 @@
 <body>
     <!--================ Start Header Area =================-->
     <div class="container-fluid">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center" align="center">
             <div class="col-md-auto">
                 <div class="logo justify-content-center"><a href="index.html"> <img src="Assets/Logo.png" alt=""
                             srcset="" width="100%" height="100%"></a>
