--- a/index.html
+++ b/index.html
@@ -223,9 +223,13 @@
 
     <!-- ===========Start Take a tour ===========-->
     <div class="container" align="center">
-        <div class="col mx-auto tour-button" align="center">
-            <a href="/tour.html"><img src="/Assets/take a tour buttonv2.png" alt="" srcset="" width="100%"
-                    height="100%"></a>
+        <div class="col mx-auto tour-button " align="center">
+            <a href="/tour.html"><img src="/Assets/take-a-tour-buttonv2.png" alt="" srcset="" width="100%"
+                    height="100%">
+                <p class="ct-animate-blink" align="center">
+                    Take a tour
+                </p>
+            </a>
         </div>
 
 
