--- a/index.html
+++ b/index.html
@@ -237,31 +237,31 @@
     <!-- ===========End Take a tour ===========-->
 
     <!-- ========== Start Footer ============== -->
-    <div class="footer">
-        <footer>
-            <!-- <div class="container">
+    <!-- <div class="footer">
+        <footer> -->
+    <!-- <div class="container">
                 <div class="row"> -->
-            <!-- <div class="col item text">
+    <!-- <div class="col item text">
                         <h3>Why did we start Toonland?</h3>
                         <h3>Message from CEO</h3>
                     </div> -->
-            <!-- <div class="col">
+    <!-- <div class="col">
                         <div class="powered mx-auto" align="center">
                             <h3>Brand powered by</h3>
                             <img src="/Assets/Propelling story-8.png " alt=" " srcset="" width="100%" height="100%"> -->
-            <!-- <div class="item social mx-auto ">
+    <!-- <div class="item social mx-auto ">
                                 <a href="# "><i class="icon ion-social-facebook "></i></a>
                                 <a href="# "><i class="icon ion-social-twitter "></i></a>
                                 <a href="# "><i class="icon ion-social-snapchat "></i></a>
                                 <a href="# "><i class="icon ion-social-instagram "></i></a>
                             </div> -->
-            <!-- <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
+    <!-- <p class="copyright ">&#169;Toonland 2022 all rights reserved.</p>
                         </div>
                     </div>
 
                 </div>
             </div> -->
-            <!-- <div class="links mx-auto" align="center">
+    <!-- <div class="links mx-auto" align="center">
                 <ul>
                     <li id="music">
                         <h3>
@@ -279,28 +279,28 @@
                     </li>
                 </ul>
             </div> -->
-            <div class="container">
+    <!-- <div class="container">
                 <div class="row">
                     <div class="col">
                         <p class="powered">
-                            <!-- Powered By <br> -->
-                            <!-- <a href="http://propellingstories.com/">
+                            Powered By <br>
+                            <a href="http://propellingstories.com/">
                                 <img src="/Assets/propelling logo.png" alt="" srcset="" width="170rem" height="auto">
-                            </a> -->
+                            </a>
                         </p>
                     </div>
 
-                </div>
-                <!-- <div class="row">
+                </div> -->
+    <!-- <div class="row">
                     <div class="col">
                         <p class="copyright ">&#169;Toonland 2022<br> all rights reserved.</p>
                     </div>
 
                 </div> -->
-
+    <!-- 
             </div>
 
-        </footer>
+        </footer> -->
     </div>
     <!-- ========== End Footer ============== -->
 
