--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
 </head>
 
 <body>
-    <!--================ Start Header Area =================-->
-    <div class="container-fluid">
-        <div class="row justify-content-md-center">
-            <div class="col-md-auto">
-                <!-- <div class="logo justify-content-center"><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"> -->
+    <div class="scrolling">
+
+
+        <!--================ Start Header Area =================-->
+        <div class="container-fluid">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto">
+                    <!-- <div class="logo justify-content-center"><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"> -->
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <!--================ End Header Area =================-->
 
@@ -303,7 +306,7 @@
         </footer> -->
     </div>
     <!-- ========== End Footer ============== -->
-
+    </div>
 </body>
 
 </html>
