--- a/Inner Pages/quiz.html
+++ b/Inner Pages/quiz.html
@@ -48,12 +48,12 @@
     <!-- Quiz Box -->
     <div class="quiz_box">
         <header>
-            <div class="title">Awesome Quiz Application</div>
-            <!-- <div class="timer">
+            <div class="title">Toonland Quiz</div>
+            <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">15</div>
             </div>
-            <div class="time_line"></div> -->
+            <div class="time_line"></div>
         </header>
         <section>
             <div class="que_text">
