--- a/Inner Pages/music.html
+++ b/Inner Pages/music.html
@@ -70,7 +70,7 @@
             <div id='card'>
                 <div id='display'>
                     <div id='header'>
-                        <h1 id='title'></h1>
+                        <p id='title'></p>
                         <p>
                             <span id='song_title'></span>
                         </p>
