--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
 </head>
 
 <body>
-    <div class="scrolling">
 
 
-        <!--================ Start Header Area =================-->
-        <div class="container-fluid">
+    <!--================ Start Header Area =================-->
+    <!-- <div class="container-fluid">
             <div class="row justify-content-md-center">
                 <div class="col-md-auto">
-                    <!-- <div class="logo justify-content-center"><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%"> -->
+                    <div class="logo justify-content-center"><img src="Assets/Logo.png" alt="" srcset="" width="100%" height="100%">
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--================ End Header Area =================-->
 
     <!--========== Start Main Landing Area ================-->
@@ -63,20 +62,20 @@
 
         </header>
     </div> -->
-    <div class="container-fluid landing-page">
+    <!-- <div class="container-fluid landing-page">
         <div class="row justify-content-md-center">
             <div class="header"></div>
-            <!-- <div class="hero"><img src="Assets/hero-image-home-page-v2.jpg" alt="" srcset="" width="100%"
+            <div class="hero"><img src="Assets/hero-image-home-page-v2.jpg" alt="" srcset="" width="100%"
                         height="100%">
-                </div> -->
-            <!-- <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
-                        class="logo-typo carousel-caption justify-content-md-center mx-auto"> -->
-            <!-- <p class="sub-text carousel-caption">Welcomes you</p> -->
+                </div>
+            <img src="Assets/typography_toonland_white.png" alt="" srcset="" width="100%" height="100%"
+                        class="logo-typo carousel-caption justify-content-md-center mx-auto">
+            <p class="sub-text carousel-caption">Welcomes you</p>
 
         </div>
-    </div>
+    </div> -->
 
-
+    <div class="header"></div>
     <!--========== End Main Landing Area ==========-->
 
     <!--========== Start Sidebar ==========-->
@@ -226,7 +225,7 @@
 
     <!-- ===========Start Take a tour ===========-->
     <div class="container" align="center">
-        <div class="col mx-auto tour-button " align="center">
+        <div class="col tour-button " align="center">
             <a href="/tour.html"><img src="/Assets/take-a-tour-buttonv2.png" alt="" srcset="" width="100%"
                     height="100%">
                 <p class="ct-animate-blink" align="center">
@@ -234,8 +233,6 @@
                 </p>
             </a>
         </div>
-
-
     </div>
     <!-- ===========End Take a tour ===========-->
 
@@ -306,7 +303,7 @@
         </footer> -->
     </div>
     <!-- ========== End Footer ============== -->
-    </div>
+
 </body>
 
 </html>
