--- a/Inner Pages/music.html
+++ b/Inner Pages/music.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToonLand</title>
+
+    <link rel="shortcut icon" href="./Assets/Logo2.png" type="image/x-icon" width="100%" height="100%">
 
     <!-- ========Bootstrap Links============= -->
     <!-- BootStarp CSS -->
