--- a/characterSheet.html
+++ b/characterSheet.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonLand - Charactersheet</title>
 
+
+    <link rel="shortcut icon" href="./Assets/Logo2.png" type="image/x-icon" width="100%" height="100%">
     <!-- ========Bootstrap Links============= -->
     <!-- BootStarp CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
