--- a/download.html
+++ b/download.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToonLand - Charactersheet</title>
+    <title>ToonLand</title>
 
+    <link rel="shortcut icon" href="./Assets/Logo2.png" type="image/x-icon" width="100%" height="100%">
     <!-- ========Bootstrap Links============= -->
     <!-- BootStarp CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
@@ -52,43 +53,43 @@
 
     <!--======== Start comic cards =========-->
     <div class="container comic-card" align="center> 
-        <div class="row mx-auto justify-content-center">
-            <div class="col">
-                <div class="card text-center border-0" style="width: 12rem;">
-                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card text-center border-0" style="width: 12rem;">
-                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card text-center text-center border-0" style="width: 12rem;">
-                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card text-center border-0" style="width: 12rem;">
-                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
-                    </div>
+        <div class=" row mx-auto justify-content-center">
+        <div class="col">
+            <div class="card text-center border-0" style="width: 12rem;">
+                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
                 </div>
             </div>
         </div>
+
+        <div class="col">
+            <div class="card text-center border-0" style="width: 12rem;">
+                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card text-center text-center border-0" style="width: 12rem;">
+                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card text-center border-0" style="width: 12rem;">
+                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
 
