--- a/Inner Pages/library.html
+++ b/Inner Pages/library.html
@@ -83,6 +83,33 @@
     </div>
     <!--============= End Pricing Section ============= -->
 
+    <!--========= Start related section ========= -->
+    <div class="container">
+        <div class="row row-cols-4">
+            <!-- <div class="col">
+                <a href="/Inner Pages/library.html">
+                    <img src="/Assets/library-card.png" alt="" srcset="">
+                </a>
+            </div> -->
+            <div class="col">
+                <a href="/Inner Pages/theatre.html">
+                    <img src="/Assets/theatre-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/Inner Pages/music.html">
+                    <img src="/Assets/music-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/download.html">
+                    <img src="/Assets/character-card.png" alt="" srcset="">
+                </a>
+            </div>
+        </div>
+    </div>
+    <!--========= End related section ========= -->
+
 </body>
 
 </html>
