--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToonLand</title>
 
+
     <link rel="shortcut icon" href="./Assets/Logo2.png" type="image/x-icon" width="100%" height="100%">
     <!-- ========Bootstrap Links============= -->
     <!-- BootStarp CSS -->
@@ -51,48 +52,94 @@
     </div>
     <!--================ End Header Area =================-->
 
+    <!--======== Start Meet our characters real ===========-->
+    <div class="container">
+        <div class="row row-cols-3" align="center">
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+            <div class="col"><img src="/Assets/dummy-card.png" alt="" srcset=""></div>
+        </div>
+    </div>
+    <!--======== End Meet our characters real ===========-->
+
     <!--======== Start comic cards =========-->
-    <div class="container comic-card" align="center> 
-        <div class=" row mx-auto justify-content-center">
-        <div class="col">
-            <div class="card text-center border-0" style="width: 12rem;">
-                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+    <div class="container comic-card" align="center">
+        <div class="row mx-auto justify-content-center">
+
+
+            <div class="col">
+                <div class="card text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col">
-            <div class="card text-center border-0" style="width: 12rem;">
-                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+            <div class="col">
+                <div class="card text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col">
-            <div class="card text-center text-center border-0" style="width: 12rem;">
-                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+            <div class="col">
+                <div class="card text-center text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col">
-            <div class="card text-center border-0" style="width: 12rem;">
-                <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+            <div class="col">
+                <div class="card text-center border-0" style="width: 12rem;">
+                    <img src="/Assets/comic-dummy-cover-page.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a href="/Assets/final year syllabus.pdf" class="btn btn-primary" download="Comic">Download</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!--======== Start comic cards =========-->
+
+    <!--========= Start related section ========= -->
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col">
+                <a href="/Inner Pages/library.html">
+                    <img src="/Assets/library-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/Inner Pages/theatre.html">
+                    <img src="/Assets/theatre-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <div class="col">
+                <a href="/Inner Pages/music.html">
+                    <img src="/Assets/music-card.png" alt="" srcset="">
+                </a>
+            </div>
+            <!-- <div class="col">
+                <a href="/download.html">
+                    <img src="/Assets/character-card.png" alt="" srcset="">
+                </a>
+            </div> -->
+        </div>
     </div>
-
-
+    <!--========= End related section ========= -->
 
     <!-- ========== Start Footer ============== -->
     <!-- <div class="footer">
